adicionado - Lançamento e Top filmes

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,11 @@
-dasda
+<app-movie-list
+    [title]="'Lançamento'"
+    [moviesList]="newMovies"
+>
+</app-movie-list>
+
+<app-movie-list
+    [title]="'Em Alta'"
+    [moviesList]="topMovies"
+>
+</app-movie-list>
