Adicionado | Lançamentos e Em Alta

--- a/src/app/scss/variables.scss
+++ b/src/app/scss/variables.scss
@@ -1,6 +1,10 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    text-decoration: none;
+// --------- | COLORS | ----------
+$backg: #060513;
+$golden: #F2F3AE;
+$redleft: #F4442E;
+$blueright: #4262FE;
+$laranja: #FC9E4F;
 
-}
+// --------- | FONTS | ----------
+$banshc : normal normal bold 25px/35px Bahnschrift;
+$titulo-movie: normal normal bold 74px/89px Gill Sans MT;
