--- a/src/app/scss/variables.scss
+++ b/src/app/scss/variables.scss
@@ -6,5 +6,7 @@ $blueright: #4262FE;
 $laranja: #FC9E4F;
 
 // --------- | FONTS | ----------
-$banshc : normal normal bold 25px/35px Bahnschrift;
-$titulo-movie: normal normal bold 74px/89px Gill Sans MT;
+$banshc : normal normal normal 25px/35px Bahnschrift;
+$banshcB : normal normal bold 25px/35px Bahnschrift;
+$titulo-star: normal normal bold 10px   Gill Sans MT;
+$titulo-detail: normal normal bold 40px   Gill Sans MT;
