--- a/src/app/shared/movie/movie-list/movie-list.component.html
+++ b/src/app/shared/movie/movie-list/movie-list.component.html
@@ -7,6 +7,7 @@
         <div class="movie" *ngFor="let movie of moviesList">
             <app-movie-card
                 [imgCard]="movie.poster_path"
+                [movieId]="movie.id"
             ></app-movie-card>
         </div>
     </div>
