--- a/src/app/shared/movie/movie-list/movie-list.component.scss
+++ b/src/app/shared/movie/movie-list/movie-list.component.scss
@@ -3,14 +3,18 @@
 .movie-list{
     display: flex;
     flex-wrap: wrap;
+
+    margin-top: 60px;
+
     width: 100%;
-
-
 }
 
 .gender{
-    font: $banshc;
+    margin-left: 20px;
+
+    font: $banshcB;
     color: $golden;
+
 }
 
 .divisors{
@@ -20,7 +24,7 @@
     margin-left: auto;
     margin-bottom: 20px;
     
-    width: 250px;
+    width: 50%;
     height: 3px;
     
     background: transparent linear-gradient(90deg, #FFFFFF0D 0%, #80808099 100%) 0% 0% no-repeat padding-box;
