--- a/src/app/shared/movie/movie-details/movie-details.component.scss
+++ b/src/app/shared/movie/movie-details/movie-details.component.scss
@@ -1,56 +1,68 @@
 @import "../../../scss/variables.scss";
 
-img{
-    width: 100%;
-}
-
+//  ------ Epecificações da página -------
 h3{
     font: $banshc;
     font-size: 15px;
     color: white;
     margin: 0 10px 0 10px;
+    filter: drop-shadow(0px 0px 2px #000);
 }
 
 h2{
     text-align: center;
     font: $banshc;
-    color: $redleft;
+    color: $laranja;
     margin-top: 20px;
     margin-bottom: -30px;
+
 }
 
+// ----- | AWESOME FONTS | --------
+// - heart - | Dentro de .heart-favorite
+.fas{
+    color: $laranja;
+    font-size: 20px;
+}
+
+//----------------------------------
 
 .movie-features{
     display: flex;
     flex-wrap: wrap;
-    margin-top: -200px;
+    margin-top: -160px;
 }
 
 // Contem todo o conteudo amostral para o MOVIE
-.movie{
-
-}
-
 .movie-informations{
     display: flex;
     justify-content: space-between;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(8px);
     width: 90%;
 }
 
 .heart-favorite{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     width: 10%;
-    background-color: rgba(50,50,50,0.4);
-    backdrop-filter: blur(5px);
+    background-color: rgba(50, 50, 50, 0.397);
+    backdrop-filter: blur(4px);
+    
 }
 
 .movie-title{
+    display: flex;
+    align-content: center;
     width: 100%;
-    padding-left: 10px;
+    padding: 20px 0px 20px 10px;
 
     font: $titulo-detail;
+    font-stretch: condensed;
     color:white;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(8px);
+    filter: drop-shadow(0px 0px 2px #000);
 }
 
 .movie-genre{
@@ -60,7 +72,20 @@ h2{
 
     width: 100%;
 
+    
     background-color: rgba(50,50,50,0.4);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(8px);
 }
 
+.movie-detail{
+    padding: 0 5px 0 5px;
+    margin-top: 20px;
+
+    font: $banshc;
+    font-stretch: condensed;
+    color: white;
+    h4{
+        font: $banshcB;
+        text-align: center;
+    }
+}
