--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-hide-menu></app-hide-menu>
+<app-header></app-header>
