--- a/src/app/shared/movie/movie-star/movie-star.component.scss
+++ b/src/app/shared/movie/movie-star/movie-star.component.scss
@@ -38,7 +38,7 @@ h2{
     background: transparent;
     backdrop-filter: blur(5px);
     background-color: rgba(255, 255, 255, 0.09);
-    filter: grayscale(1);
+    // filter: grayscale(1);
 
 }
 
